Set up the github mcp server
The token is kept in a local settings file that is not version controlled

--- a/home/zed/config/settings.json
+++ b/home/zed/config/settings.json
@@ -17,6 +17,13 @@
     "font_family": "FiraCode Nerd Font Mono"
   },
   "context_servers": {
+    "mcp-server-github": {
+      "enabled": true,
+      "remote": false,
+      "settings": {
+        "github_personal_access_token": "GITHUB_PERSONAL_ACCESS_TOKEN"
+      }
+    },
     "terraform-context-server": {
       "enabled": true,
       "settings": {}
