Some preferences to sync for favourite models and styling of the editor

--- a/home/zed/config/settings.json
+++ b/home/zed/config/settings.json
@@ -31,19 +31,41 @@
     // Add context servers with tokens in settings.local.json
   },
   "agent": {
+    "favorite_models": [
+      {
+        "provider": "ollama",
+        "model": "deepseek-r1:latest"
+      },
+      {
+        "provider": "copilot_chat",
+        "model": "claude-opus-4.5"
+      },
+      {
+        "provider": "copilot_chat",
+        "model": "claude-sonnet-4.5"
+      },
+      {
+        "provider": "copilot_chat",
+        "model": "gemini-3-pro-preview"
+      },
+      {
+        "provider": "copilot_chat",
+        "model": "claude-opus-4.6"
+      }
+    ],
     "inline_assistant_model": {
       "provider": "copilot_chat",
       "model": "claude-sonnet-4.5"
     },
     "always_allow_tool_actions": true,
-    "default_profile": "write",
+    "default_profile": "ask",
     "default_model": {
       "provider": "copilot_chat",
-      "model": "claude-opus-4.5"
+      "model": "claude-opus-4.6"
     }
   },
   "autosave": "on_focus_change",
-  "icon_theme": "Catppuccin Mocha",
+  "icon_theme": "Catppuccin Latte",
   "base_keymap": "SublimeText",
   "theme": "Nightfox - opaque",
   "theme_overrides": {
