--- a/home/opencode/config/package.json
+++ b/home/opencode/config/package.json
@@ -1,5 +1,23 @@
 {
+  "permission": {
+    "websearch": "allow",
+    "question": "allow",
+    "code": "allow",
+    "file": "allow",
+    "terminal": "allow",
+    "plugin": "allow"
+  },
   "dependencies": {
-    "@opencode-ai/plugin": "1.2.6"
+    "@opencode-ai/plugin": "1.2.10"
+  },
+  "mcp": {
+    "context7": {
+      "type": "remote",
+      "url": "https://mcp.context7.com/mcp",
+      "headers": {
+        "CONTEXT7_API_KEY": "CONTEXT7_API_KEY"
+      },
+      "enabled": true
+    }
   }
 }
