--- a/home/zed/config/settings.json
+++ b/home/zed/config/settings.json
@@ -22,6 +22,13 @@
     "font_family": "FiraCode Nerd Font Mono"
   },
   "context_servers": {
+    "mcp-server-context7": {
+      "enabled": true,
+      "remote": false,
+      "settings": {
+        "context7_api_key": "CONTEXT7_API_KEY"
+      }
+    },
     "mcp-server-github": {
       "enabled": true,
       "remote": false,
